--- a/static/style.css
+++ b/static/style.css
@@ -17,5 +17,12 @@
   height: 100%;
   height: 100px;
   width: 100px;
-  
+
+}
+
+.bottomright {
+  position: absolute;
+  bottom: 8px;
+  right: 16px;
+  font-size: 18px;
 }
