--- a/templates/testBattle.html
+++ b/templates/testBattle.html
@@ -2,33 +2,48 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/style.css"/>
+  <link rel="stylesheet" href="../static/style.css" />
   <title> Battle! </title>
 </head>
 
 <nav class="navbar sticky-top navbar-light navbar-expand-sm" style="background-color: #ff4a83;">
-    <a class="navbar-brand" href="#">
-        <img src="../static/pokeball.png" width="30" height="30" class="d-inline-block align-top">
-        Pokemon Showdown
-    </a>
+  <a class="navbar-brand" href="#">
+    <img src="../static/pokeball.png" width="30" height="30" class="d-inline-block align-top">
+    Pokemon Showdown
+  </a>
 
-    <ul class="navbar-nav">
-        <li class="nav-item">
-            <a class="nav-link" href=""> Build </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href=""> Battle </a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link" href=""> Log out </a>
-        </li>
-    </ul>
+  <ul class="navbar-nav">
+    <li class="nav-item">
+      <a class="nav-link" href=""> Build </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href=""> Battle </a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href=""> Log out </a>
+    </li>
+  </ul>
 </nav>
-
-<div class= "bg">
+<br>
+<div class="container bg border border-dark">
   <!-- <img src="https://pvpoke.com/img/bg.jpg" class="img-fluid w-50 p-3" alt="Responsive image"> -->
-  
-  <img src=
-  "https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/1.png"
-  class="img-fluid w-25 h-30" alt="Responsive image">
+  <!-- <div class="row-xl align-items-end">
+    <div class="col bottomright"> -->
+  <div class="row h-80 w-100">
+    <div class="col align-self-end">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/1.png" class="img-fluid h-70 w-40" style="height:350px; width:350px">
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+        </div>
+      </div>
+    </div>
+    <div class="col align-self-end">
+      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png" class="img-fluid h-70 w-40" style="height:350px; width:350px">
+      <div class="progress">
+        <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+      </div>
+    </div>
+  </div>
+  <div class="row h-20 w-100">
+  </div>
 </div>
