--- a/templates/testBattle.html
+++ b/templates/testBattle.html
@@ -24,26 +24,44 @@
     </li>
   </ul>
 </nav>
+
 <br>
-<div class="container bg border border-dark">
-  <!-- <img src="https://pvpoke.com/img/bg.jpg" class="img-fluid w-50 p-3" alt="Responsive image"> -->
-  <!-- <div class="row-xl align-items-end">
-    <div class="col bottomright"> -->
-  <div class="row h-80 w-100">
-    <div class="col align-self-end">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/1.png" class="img-fluid h-70 w-40" style="height:350px; width:350px">
-      <div class="progress">
-        <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+<div class="container">
+  <div class="row h-90 w-100">
+    <div class="col-sm-1">
+      <div class="btn-group-vertical">
+        <button type="button" class="btn btn-secondary"> Move 1</button>
+        <button type="button" class="btn btn-secondary">Move 2</button>
+        <button type="button" class="btn btn-secondary"> Move 3</button>
+        <button type="button" class="btn btn-secondary">Move 4</button>
+      </div>
+    </div>
+    <div class="col-sm-9 bg border border-dark">
+      <div class="row h-100 w-100">
+        <div class="col align-self-end">
+          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/1.png" class="img-fluid h-70 w-40" style="height:350px; width:350px">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
+            </div>
+          </div>
+        </div>
+        <div class="col align-self-end">
+          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png" class="img-fluid h-70 w-40" style="height:350px; width:350px">
+          <div class="progress">
+            <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="col align-self-end">
-      <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png" class="img-fluid h-70 w-40" style="height:350px; width:350px">
-      <div class="progress">
-        <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+    <div class="col-sm-1">
+      <div class="btn-group-vertical">
+        <button type="button" class="btn btn-secondary"> pokemon 1</button>
+        <button type="button" class="btn btn-secondary"> pokemon 2</button>
+        <button type="button" class="btn btn-secondary"> pokemon 3</button>
+        <button type="button" class="btn btn-secondary"> pokemon 4</button>
+        <button type="button" class="btn btn-secondary"> pokemon 5</button>
+        <button type="button" class="btn btn-secondary"> pokemon 6</button>
       </div>
     </div>
-  </div>
-  <div class="row h-20 w-100">
   </div>
 </div>
