--- a/templates/style.css
+++ b/templates/style.css
@@ -1,3 +1,7 @@
-<style>
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,400');
-</style>
+body {
+  background: url("../static/karp.jpg") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  background-size: cover;
+  -o-background-size: cover;
+}
