--- a/templates/testBattle.html
+++ b/templates/testBattle.html
@@ -53,13 +53,13 @@
             <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
             </div>
           </div>
-          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/back/1.png" class="img-fluid h-70 w-40" style="height:350px; width:350px">
+          <img src={{teams['team1'][0]['pic']}} class="img-fluid h-70 w-30" style="height:350px; width:350px">
         </div>
         <div class="col align-self-end">
           <div class="progress">
             <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/132.png" class="img-fluid h-70 w-40" style="height:350px; width:350px">
+          <img src={{teams['team2'][3]['pic']}} class="img-fluid h-70 w-30" style="height:350px; width:350px">
         </div>
       </div>
     </div>
