--- a/templates/index.html
+++ b/templates/index.html
@@ -4,12 +4,16 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap">
+    <link rel="stylesheet" href="style.css">
+
     <link rel="apple-touch-icon" sizes="180x180" href="../static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../static/favicon-16x16.png">
     <link rel="manifest" href="../static/site.webmanifest">
+
     <title> Welcome! </title>
 </head>
 
@@ -33,9 +37,27 @@
 </nav>
 
 <body>
-    <div class="container-fluid">
-        abcd
-    </div>
+    <div class="container">
+        <div class="card border-0 shadow my-5" style = "opacity: .9;">
+          <div class="card-body p-5">
+            <h2> Welcome {{user}}! </h2>
+            TEXT 
+            <br> <br>
+
+            <hr>
+    
+            <h2> Build </h2>
+            TEXT 
+            <br> <br>
+            <a href="" class ="link"> Build Deck! </a>
+    
+            <hr>
+    
+            <h2> Battle </h2>
+            TEXT 
+            <br> <br>
+            <a href="" style = "text-decoration: none;"> Battle Now! </a>
+          </div>
 </body>
 
 </html>
