--- a/templates/style.css
+++ b/templates/style.css
@@ -1,7 +1,16 @@
+html *
+{
+   font-family: "Raleway", sans-serif;
+}
+
 body {
-  background: url("../static/karp.jpg") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
+    background: url("../static/karp.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+}
+
+.link {
+    text-decoration: none;
 }
