--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,7 @@
 
     <ul class="nav navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href=""> Build </a>
+            <a class="nav-link button" href=""> Build </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href=""> Battle </a>
