--- a/templates/login.html
+++ b/templates/login.html
@@ -12,9 +12,9 @@ DOES NOT WORK -->
   <title>Login</title>
 </head>
 
-<body style="background: url('http://eskipaper.com/images/green-background-8.jpg') no-repeat center center fixed; -webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;">
+<body style="background: url('http://getwallpapers.com/wallpaper/full/c/1/8/836413-pokemon-charizard-vs-blastoise-hd-wallpapers-1920x1080-for-lockscreen.jpg') no-repeat center center fixed; -webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;">
   <div class="container">
-    <div class="card border-0 shadow my-5">
+    <div class="card border-0 shadow my-5 logincard">
       <div class="card-body p-5">
         {%if error%}
           <h2><font color="red"> {{error}} </font></h2>
