--- a/templates/register.html
+++ b/templates/register.html
@@ -12,7 +12,7 @@
   <title>Register</title>
 </head>
 
-<body style="background: url('http://eskipaper.com/images/green-background-8.jpg') no-repeat center center fixed; -webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;">
+<body style="background: url('../static/karp.jpg') no-repeat center center fixed; -webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;">
   <div class="container">
     <div class="card border-0 shadow my-5">
       <div class="card-body p-5">
