--- a/templates/style.css
+++ b/templates/style.css
@@ -11,3 +11,7 @@ body {
     -o-background-size: cover;
     max-width: 100%;
 }
+
+.logincard {
+    background-color: rgba(255, 255, 255, 0.75);
+}
