did some build page stuff

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap">
     <link rel="stylesheet" href="style.css">
 
@@ -38,28 +39,30 @@
     </ul>
 </nav>
 
-<body>
+<body class="welcome">
     <div class="container">
-        <div class="card border-0 shadow my-5" style = "opacity: .9;">
-          <div class="card-body p-5">
-            <h2> Welcome {{user}}! </h2>
-            TEXT
-            <br> <br>
+        <div class="card border-0 shadow my-5" style="opacity: .9;">
+            <div class="card-body p-5">
+                <h2> Welcome {{user}}! </h2>
+                TEXT
+                <br> <br>
 
-            <hr>
+                <hr>
 
-            <h2> Build </h2>
-            TEXT
-            <br> <br>
-            <a href="" class = "btn btn-light"> Build Deck! </a>
+                <h2> Build </h2>
+                TEXT
+                <br> <br>
+                <a href="" class="btn btn-light"> Build Deck! </a>
 
-            <hr>
+                <hr>
 
-            <h2> Battle </h2>
-            TEXT
-            <br> <br>
-            <a href="" class = "btn btn-light"> Battle Now! </a>
-          </div>
+                <h2> Battle </h2>
+                TEXT
+                <br> <br>
+                <a href="" class="btn btn-light"> Battle Now! </a>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
