--- a/templates/style.css
+++ b/templates/style.css
@@ -3,8 +3,17 @@ html *
    font-family: "Raleway", sans-serif;
 }
 
-body {
+.welcome {
     background: url("../static/welcomeimg.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    max-width: 100%;
+}
+
+.build {
+    background: url("../static/build.jpg") no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
