--- a/templates/build.html
+++ b/templates/build.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../static/style2.css">
 
     <link rel="apple-touch-icon" sizes="180x180" href="../static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon-32x32.png">
@@ -18,14 +18,14 @@
 </head>
 
 <nav class="navbar sticky-top navbar-light navbar-expand-sm" style="background-color: white; opacity: .9;">
-    <a class="navbar-brand" href="#">
+    <a class="navbar-brand" href="/welcome">
         <img src="../static/pokeball.png" width="30" height="30" class="d-inline-block align-top">
         Pokemon Showdown
     </a>
 
     <ul class="nav navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link button active" href=""> Build </a>
+            <a class="nav-link button active" href="/build"> Build </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href=""> Battle </a>
@@ -40,6 +40,8 @@
 </nav>
 
 <body class="build">
+    <script src = "../static/build.js"> </script>
+
     <div class="row col-sm-12">
         <div class="col-sm-6">
             <div class="card border-0 shadow my-5 ml-5" style="opacity: .9;">
