--- a/templates/testBattle.html
+++ b/templates/testBattle.html
@@ -41,7 +41,7 @@
     <div class="col-sm-1">
       <div class="btn-group-vertical">
         {% for i in teams['team1'] %}
-          <button type="button" class="btn btn-secondary"> {{teams['team1'][i]['name']}} </button>
+          <button type="button" class="btn btn-secondary team1pokemon"> {{teams['team1'][i]['name']}} </button>
         {% endfor %}
 
       </div>
@@ -49,7 +49,7 @@
     <div class="col-sm-1">
       <div class="btn-group-vertical">
         {% for i in teams['team1'][0]['moves'] %}
-          <button type="button" class="btn btn-secondary"> {{teams['team1'][0]['moves'][i]['name']}} </button>
+          <button type="button" class="btn btn-secondary team1moves"> {{teams['team1'][0]['moves'][i]['name']}} </button>
         {% endfor %}
       </div>
     </div>
@@ -61,27 +61,27 @@
             <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100">
             </div>
           </div>
-          <img src={{teams['team1'][0]['pic']}} class="img-fluid h-70 w-30" style="height:350px; width:350px">
+          <img src={{teams['team1'][0]['pic']}} id="team1pic" class="img-fluid h-70 w-30" style="height:350px; width:350px">
         </div>
         <div class="col align-self-end">
           <div class="progress">
             <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
-          <img src={{teams['team2'][3]['pic']}} class="img-fluid h-70 w-30" style="height:350px; width:350px">
+          <img src={{teams['team2'][3]['pic']}} id="team2pic" class="img-fluid h-70 w-30" style="height:350px; width:350px">
         </div>
       </div>
     </div>
     <div class="col-sm-1">
-      <div class="btn-group-vertical">
+      <div class="btn-group-vertical"  >
         {% for i in teams['team2'][3]['moves'] %}
-          <button type="button" class="btn btn-secondary"> {{teams['team2'][3]['moves'][i]['name']}} </button>
+          <button type="button" class="btn btn-secondary team2moves"> {{teams['team2'][3]['moves'][i]['name']}} </button>
         {% endfor %}
       </div>
     </div>
     <div class="col-sm-1">
       <div class="btn-group-vertical">
         {% for x in teams['team2'] %}
-          <button type="button" class="btn btn-secondary"> {{teams['team2'][x]['name']}} </button>
+          <button type="button" class="btn btn-secondary team2pokemon"> {{teams['team2'][x]['name']}} </button>
         {% endfor %}
       </div>
     </div>
