--- a/templates/build.html
+++ b/templates/build.html
@@ -55,7 +55,7 @@
                               <option> 2 </option>
                             </select>
 
-                            <button type="submit" class="btn btn-light"> Pick </button>
+                            <button class="btn btn-light" id = "b1"> Pick </button>
                         </div>
                     </form>
                 </div>
@@ -74,7 +74,7 @@
                               <option> 2 </option>
                             </select>
 
-                            <button type="submit" class="btn btn-light"> Pick </button>
+                            <button class="btn btn-light" id = "b2"> Pick </button>
                         </div>
                     </form>
                 </div>
