--- a/templates/template.html
+++ b/templates/template.html
@@ -4,30 +4,39 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css"/>
+
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap">
+    <link rel="stylesheet" href="../static/style2.css">
+
     <link rel="apple-touch-icon" sizes="180x180" href="../static/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="../static/favicon-16x16.png">
-    <link rel="manifest" href="../static/site.webmanifest">
+
+    {% block head %}{% endblock %}
+
     <title> {% block title %}{% endblock %} </title>
 </head>
 
-<nav class="navbar sticky-top navbar-light navbar-expand-sm" style="background-color: #e3f2fd;">
-    <a class="navbar-brand" href="#">
+<nav class="navbar sticky-top navbar-light navbar-expand-sm" style="background-color: white; opacity: .9;">
+    <a class="navbar-brand" href="/welcome">
         <img src="../static/pokeball.png" width="30" height="30" class="d-inline-block align-top">
         Pokemon Showdown
     </a>
 
-    <ul class="navbar-nav">
+    <ul class="nav navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link" href=""> Build </a>
+            <a class="nav-link button active" href="/build"> Build </a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href=""> Battle </a>
         </li>
+    </ul>
+
+    <ul class="nav navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href=""> Log out </a>
+            <a class="nav-link" href=""> Logout </a>
         </li>
     </ul>
 </nav>
