--- a/static/style2.css
+++ b/static/style2.css
@@ -21,6 +21,15 @@ html *
     max-width: 100%;
 }
 
+.setup {
+    background: url("../static/setup.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    max-width: 100%;
+}
+
 .logincard {
     background-color: rgba(255, 255, 255, 0.75);
 }
