--- a/templates/build.html
+++ b/templates/build.html
@@ -94,7 +94,7 @@
 
                     <h3> Moves: </h3>
 
-                    <button type="button" class="btn btn-light"> I'm Finished! </button>
+                    <button type="button" class="btn btn-light"> I'm Finished With This Pokemon! </button>
                 </div>
             </div>
         </div>
