--- a/templates/register.html
+++ b/templates/register.html
@@ -21,7 +21,7 @@
           <font color="red"> {{error}} </font>
         </h2>
         {%endif%}
-        <form action="/processRegistration" class="was-validated">
+        <form action="/addUser" class="was-validated">
           <div class="form-group">
             <label for="uname">Username:</label>
             <input type="text" class="form-control" id="uname" placeholder="Username" name="username" required>
