--- a/templates/template.html
+++ b/templates/template.html
@@ -24,10 +24,10 @@
             <a class="nav-link" href=""> Build </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href=""> Battle </a>
+            <a class="nav-link" href="/a"> Battle </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href=""> Log out </a>
+            <a class="nav-link" href="/logout"> Logout </a>
         </li>
     </ul>
 </nav>
