--- a/templates/index.html
+++ b/templates/index.html
@@ -27,13 +27,13 @@
             <a class="nav-link" href=""> Build </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href=""> Battle </a>
+            <a class="nav-link" href="/a"> Battle </a>
         </li>
     </ul>
 
     <ul class="nav navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href=""> Logout </a>
+            <a class="nav-link" href="/logout"> Logout </a>
         </li>
     </ul>
 </nav>
