--- a/templates/testBattle.html
+++ b/templates/testBattle.html
@@ -15,13 +15,13 @@
 
   <ul class="navbar-nav">
     <li class="nav-item">
-      <a class="nav-link" href=""> Build </a>
+      <a class="nav-link" href="/build"> Build </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href=""> Battle </a>
+      <a class="nav-link" href="/a"> Battle </a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href=""> Log out </a>
+      <a class="nav-link" href="/logout"> Log out </a>
     </li>
   </ul>
 </nav>
