--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link button" href="/build"> Build </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/battle"> Battle </a>
+            <a class="nav-link" href="/a"> Battle </a>
         </li>
     </ul>
 
@@ -44,20 +44,25 @@
         <div class="card border-0 shadow my-5" style="opacity: .9;">
             <div class="card-body p-5">
                 <h2> Welcome {{user}}! </h2>
-                TEXT
+                This is Pokemon Battle! A simulator designed to introduce beginners
+                to the wonderful realm of these otherwordly creatures. Specifically,
+                our program replicates a very stripped-down version of the games, meaning
+                no confusing mechanics such as stat changes, status afflictions and other
+                processes that may intimdate newbies. So go ahead and build a team, then
+                start battling!
                 <br> <br>
 
                 <hr>
 
                 <h2> Build </h2>
-                TEXT
+                Build your team from a pre-selction of 151 generation one Pokemon!
                 <br> <br>
                 <a href="/build" class="btn btn-light"> Build Deck! </a>
 
                 <hr>
 
                 <h2> Battle </h2>
-                TEXT
+                Battle! Battle! Battle!
                 <br> <br>
                 <a href="" class="btn btn-light"> Battle Now! </a>
             </div>
