finished build page

--- a/templates/build.html
+++ b/templates/build.html
@@ -90,8 +90,10 @@
                     </div>
 
                     <h3> Moves: </h3>
+                    <li id="chosenMoves">
 
-                    <button id="finishPokemon" type="button" class="btn btn-light"> I'm Finished With This Pokemon! </button>
+                    </li>
+                    <button onclick="finishPokemon()" id="finishPokemon" type="button" class="btn btn-light"> I'm Finished With This Pokemon! </button>
                 </div>
             </div>
         </div>
@@ -103,29 +105,30 @@
 
                     <div class="row col-sm-6 mx-auto">
                         <div class="col-sm-4">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke0" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
                         </div>
 
                         <div class="col-sm-4">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke1" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
                         </div>
 
                         <div class="col-sm-4">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke2" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
                         </div>
 
                         <div class="col-sm-4">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                            <img id="poke3" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
                         </div>
 
-                        <div class="col-sm-4">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                        <div  class="col-sm-4">
+                            <img id="poke4" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
                         </div>
 
-                        <div class="col-sm-4">
-                            <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
+                        <div  class="col-sm-4">
+                            <img id="poke5" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
                         </div>
                     </div>
+                    <a href="/welcome" class="btn btn-light" id="finalize" value="" name="team"> I'm done with this team </a>
                 </div>
             </div>
         </div>
