--- a/templates/register.html
+++ b/templates/register.html
@@ -4,17 +4,22 @@
 <!doctype html>
 <html lang="en">
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css" />
-  <title>Register</title>
-</head>
+    <head>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap">
+          <link rel="stylesheet" href="../static/style2.css">
+      
+          <link rel="apple-touch-icon" sizes="180x180" href="../static/apple-touch-icon.png">
+          <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon-32x32.png">
+          <link rel="icon" type="image/png" sizes="16x16" href="../static/favicon-16x16.png">
+        <title>Register</title>
+      </head>
 
-<body style="background: url('http://eskipaper.com/images/green-background-8.jpg') no-repeat center center fixed; -webkit-background-size: cover;-moz-background-size: cover;-o-background-size: cover;background-size: cover;">
+<body class = "login">
   <div class="container">
-    <div class="card border-0 shadow my-5">
+    <div class="card border-0 shadow my-5" style="opacity: .9;">
       <div class="card-body p-5">
         {%if error%}
         <h2>
