--- a/templates/build.html
+++ b/templates/build.html
@@ -128,7 +128,9 @@
                             <img id="poke5" src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/6.png" class="img-fluid" alt="">
                         </div>
                     </div>
-                    <a href="/welcome" class="btn btn-light" id="finalize" value="" name="team"> I'm done with this team </a>
+                    <form action = "/welcome">
+                      <button type="submit" class="btn btn-light" id="finalize" value="" name="team"> I'm done with this team </button>
+                    </form>
                 </div>
             </div>
         </div>
