--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@
             <a class="nav-link button" href="/build"> Build </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href="/a"> Battle </a>
+            <a class="nav-link" href="/battle"> Battle </a>
         </li>
     </ul>
 
