--- a/static/style.css
+++ b/static/style.css
@@ -1,3 +1,8 @@
+html *
+{
+   font-family: "Raleway", sans-serif;
+}
+
 .bg {
   /* The image used */
   background-image: url("https://pvpoke.com/img/bg.jpg");
@@ -25,4 +30,13 @@
   bottom: 8px;
   right: 16px;
   font-size: 18px;
+}
+
+.battle {
+    background: url("../static/pika.jpg") no-repeat center center fixed;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    max-width: 100%;
 }
