--- a/templates/build.html
+++ b/templates/build.html
@@ -26,16 +26,16 @@
 
     <ul class="nav navbar-nav mr-auto">
         <li class="nav-item">
-            <a class="nav-link button active" href="/build"> Build </a>
+            <a class="nav-link button" href="/build"> Build </a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" href=""> Battle </a>
+            <a class="nav-link" href="/battle"> Battle </a>
         </li>
     </ul>
 
     <ul class="nav navbar-nav ml-auto">
         <li class="nav-item">
-            <a class="nav-link" href=""> Logout </a>
+            <a class="nav-link" href="/logout"> Logout </a>
         </li>
     </ul>
 </nav>
