--- a/templates/testBattle.html
+++ b/templates/testBattle.html
@@ -7,28 +7,36 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway&display=swap">
   <link rel="stylesheet" href="../static/style.css" />
+  
   <link rel="icon" href="../static/pokeball.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="../static/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../static/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../static/favicon-16x16.png">
   <title> Battle! </title>
 </head>
 
-<nav class="navbar sticky-top navbar-light navbar-expand-sm" style="background-color: #ff4a83;">
-  <a class="navbar-brand" href="#">
-    <img src="../static/pokeball.png" width="30" height="30" class="d-inline-block align-top">
-    Pokemon Showdown
-  </a>
+<nav class="navbar sticky-top navbar-light navbar-expand-sm" style="background-color: white; opacity: .9;">
+    <a class="navbar-brand" href="/welcome">
+        <img src="../static/pokeball.png" width="30" height="30" class="d-inline-block align-top">
+        Pokemon Showdown
+    </a>
 
-  <ul class="navbar-nav">
-    <li class="nav-item">
-      <a class="nav-link" href="/build"> Build </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/battle"> Battle </a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/logout"> Log out </a>
-    </li>
-  </ul>
+    <ul class="nav navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link button" href="/build"> Build </a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="/battle"> Battle </a>
+        </li>
+    </ul>
+
+    <ul class="nav navbar-nav ml-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="/logout"> Logout </a>
+        </li>
+    </ul>
 </nav>
 
 <br>
@@ -133,4 +141,7 @@
 </div>
 </center>
 
+<body class = "battle">
+
+</body>
 <script src="../static/battleScript.js"></script>
